--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,4 +6,11 @@
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
+    <servlet>
+        <servlet-name>ServletDatabase</servlet-name>
+        <servlet-class>com.gabit.dev.makeawish.controllers.ServletDatabase</servlet-class></servlet>
+    <servlet-mapping>
+        <servlet-name>ServletDatabase</servlet-name>
+        <url-pattern>/ServletDatabase</url-pattern>
+    </servlet-mapping>
 </web-app>
